<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_500"
    tools:context=".ui.reset.ResetPasswordFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/reset_password_parent_guide_line_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/reset_password_parent_guide_line_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/reset_password_parent_guide_line_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/reset_password_parent_guide_line_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reset_password_child_constraint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/reset_password_parent_guide_line_bottom"
        app:layout_constraintEnd_toStartOf="@id/reset_password_parent_guide_line_end"
        app:layout_constraintStart_toEndOf="@id/reset_password_parent_guide_line_start"
        app:layout_constraintTop_toBottomOf="@id/reset_password_parent_guide_line_top">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/reset_password_guide_line_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/reset_password_guide_line_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <TextView
            android:id="@+id/reset_password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_uppercase"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/reset_password_layout_email"
            app:layout_constraintStart_toEndOf="@id/reset_password_guide_line_1"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reset_password_layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/reset_password_btn"
            app:layout_constraintEnd_toStartOf="@id/reset_password_guide_line_2"
            app:layout_constraintStart_toEndOf="@id/reset_password_guide_line_1"
            app:layout_constraintTop_toBottomOf="@id/reset_password_txt">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reset_password_edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reset_password_btn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/reset_password_uppercase"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/reset_password_guide_line_2"
            app:layout_constraintStart_toEndOf="@id/reset_password_guide_line_1"
            app:layout_constraintTop_toBottomOf="@id/reset_password_layout_email" />

        <ProgressBar
            android:id="@+id/reset_password_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>