<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/welcomeFragment">

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="ua.com.foxminded.locationtrackera.ui.splash.WelcomeFragment"
        android:label="welcome_fragment"
        tools:layout="@layout/fragment_welcome">
...
            android:id="@+id/nav_from_loginFragment_to_registrationFragment"
            app:destination="@id/registrationFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/nav_from_loginFragment_to_trackerFragment"
            app:destination="@id/trackerFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/nav_from_loginFragment_to_resetPasswordFragment"
            app:destination="@id/resetPasswordFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
...
