...
            app:layout_constraintBaseline_toBaselineOf="@id/tv_service_status"
            app:layout_constraintEnd_toStartOf="@id/tracker_guide_line_end"
            app:layout_constraintStart_toEndOf="@id/tv_service_status"
            app:layout_constraintTop_toBottomOf="@id/tracker_guide_line_top" />

        <Button
            android:id="@+id/tracker_start_stop_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
